--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,37 @@
-body {
+:root {
+  --primary-color: #0ad4fa;
+  --bg-white: #f9f9f9;
+  --bg-gray: #ededed;
+  --font-white: #fff;
+  --font-gray: #616161;
+}
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+}
+body {
+  font-family: "Source Sans Pro", sans-serif;
+  background-color: var(--bg-white);
+  font-size: 1.5rem;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container {
+  padding: 0 5rem;
+}
+
+@media screen and (max-width: 1280px) {
+  .container {
+    padding: 0 2.5rem;
+  }
+}
+@media screen and (max-width: 900px) {
+  .container {
+    padding: 0 1.5rem;
+  }
+}
+@media screen and (max-width: 600px) {
+  .container {
+    padding: 0 0.5rem;
+  }
 }
